# fairwin-be

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  fairwin_be_development.sqlite-shm  fairwin_be_development.sqlite-wal  scheduler.txt
.cargo/: config.toml
.github/workflows/: ci.yaml
commands/: create.md
config/: development.yaml  test.yaml
examples/: addresses.rs  call_sui.rs  playground.rs
migration/src/: lib.rs  m20241226_085055_pools.rs  m20250112_095527_contract_infos.rs  m20250113_012646_contracts.rs  m20250113_105404_pools.rs  m20250116_080912_add_vault_id_and_create_cap_id_and_registry_initial_version_to_contracts.rs  m20250117_080035_add_draw_cap_id_to_contracts.rs
src/: app.rs  lib.rs
src/models/: contract_infos.rs  contracts.rs  mod.rs  pools.rs
src/models/_entities/: contract_infos.rs  contracts.rs  mod.rs  pools.rs  prelude.rs  users.rs
src/tasks/: create_pool.rs  draw_pool.rs  mod.rs
src/tools/: mod.rs  ptb.rs  util.rs
src/utils/: mod.rs
src/workers/: mod.rs  report_worker.rs
tests/models/: contract_infos.rs  mod.rs  pools.rs  users.rs
tests/requests/: auth.rs  prepare_data.rs
tests/tasks/: create_pool.rs  draw_pool.rs  mod.rs  seed.rs
tests/workers/: mod.rs  report_worker.rs
