[workspace]

[package]
name = "fairwin"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "fairwin-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { version = "0.14" }

[dependencies]
shuttle-axum = "0.52.0"
shuttle-runtime = { version = "0.52.0", default-features = false }
shuttle-shared-db = { version = "0.52.0", default-features = false, features = ["postgres", "sqlx"] }

loco-rs = { workspace = true  }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.33.0", default-features = false, features = [
  "rt-multi-thread",
] }
async-trait = { version = "0.1" }
axum = { version = "0.8.1" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
regex = { version = "1.11.1" }
migration = { path = "migration" }
sea-orm = { version = "1.1.0", features = [
  # "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
chrono = { version = "0.4" }
validator = { version = "0.19" }
uuid = { version = "1.12", features = ["v4"] }
include_dir = { version = "0.7" }

# For Sui
sui_sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk"}
sui_config = { git = "https://github.com/mystenlabs/sui", package = "sui-config"}
sui_json_rpc_types = { git = "https://github.com/mystenlabs/sui", package = "sui-json-rpc-types"}
sui_keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys"}
shared_crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto"}
bcs = "0.1.6"
anyhow = "1.0"
futures = "0.3.31"
reqwest = "0.12"

[[bin]]
name = "fairwin-cli"
path = "src/bin/main.rs"
required-features = []

[[bin]]
name = "fairwin"
path = "src/bin/shuttle.rs"

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.24.0" }
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }